deployment/yaml/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcarefinance
  namespace: wcare-ns
  labels:
    app: wcare-application
    subname: wcarefinance
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 9090
      targetPort: my-http
  selector:
    app: wcare-application
    subname: wcarefinance
