deployment/yaml/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wcarefinance
  namespace: wcare-ns
  labels:
    app: wcare-application
    subname: wcarefinance
spec:
  path: /
  to:
    kind: Service
    name: wcarefinance
    weight: 100
  port:
    targetPort: my-http
